# RemezTG

./: .gitignore  Dockerfile  README.md  backup.sql  config.py  db.sqlite3  docker-compose.yml  keyboard.py  main.py  pyproject.toml  requirements.txt
database/: alembic.ini  db.sql  db.sqlite3  models.py  requests.py
database/migrations/: env.py
handlers/: about.py  addresses.py  another.py  anotherrepair.py  beauty.py  beautyoffline.py  beautyonline.py  card.py  collaboration.py  help.py  idea.py  instructions.py  mainpage.py  prevpage.py  registration.py  repair.py  shop.py  start.py
