[tool.poetry]
name = "remeztg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.34"
aiosqlite = "^0.20.0"
poetry-plugin-export = "^1.8.0"
asyncpg = "^0.29.0"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
